--- a/src/components/News.css
+++ b/src/components/News.css
@@ -1,257 +1,479 @@
-.news{
-    font-size: 2rem;
-    color: white;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    row-gap: 2rem;
+.news {
+  font-size: 2rem;
+  color: white;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  row-gap: 2rem;
 }
-.news-header{
-    width: 100%;
-    min-height: 6rem;
-    background-color: #111214;
-    border-radius: 1rem 1rem 0 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 4rem;
+.news-header {
+  width: 100%;
+  min-height: 6rem;
+  background-color: #111214;
+  border-radius: 1rem 1rem 0 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 4rem;
 }
 .logo {
-    font-family: "Bebas Neue" , sans-serif;
-    font-size: 5rem;
-    color: #ddd;
-    letter-spacing: 0.2rem;
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 5rem;
+  color: #ddd;
+  letter-spacing: 0.2rem;
 }
-.search-bar{
-    position: relative;
+.search-bar {
+  position: relative;
 }
-.search-bar input{
-    width: 25rem;
-    height: 4rem;
-    background-color: #000709;
-    border: none;
-    border-radius: 5rem;
-    padding: 0 4rem 0 2rem;
-    color: #ddd;
-    transition: 0.3s;
+.search-bar input {
+  width: 25rem;
+  height: 4rem;
+  background-color: #000709;
+  border: none;
+  border-radius: 5rem;
+  padding: 0 4rem 0 2rem;
+  color: #ddd;
+  transition: 0.3s;
 }
-.search-bar input:focus{
-   width: 35rem;
-
+.search-bar input:focus {
+  width: 35rem;
 }
-.search-bar input:focus::placeholder{
-    color: transparent ;
-    
+.search-bar input:focus::placeholder {
+  color: transparent;
 }
-.search-bar button{
-    background-color: transparent;
-    border: none;
-    position: absolute;
-    top: 50%;
-    right: 1rem;
-    transform: translateY(-50%);
-    cursor: pointer;
-    color: #bbb;
-    font-size: 1.8rem;
-
+.search-bar button {
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 50%;
+  right: 1rem;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color: #bbb;
+  font-size: 1.8rem;
 }
-.news-content{
-    display: flex;
-    column-gap: 2rem;
-    height: calc(100% - 16rem);
-    padding: 0 2rem;
+.news-content {
+  display: flex;
+  column-gap: 2rem;
+  height: calc(100% - 16rem);
+  padding: 0 2rem;
 }
-.navbar{
-    width: 18rem;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    row-gap: 2rem;
+.navbar {
+  width: 18rem;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 2rem;
 }
 
-.user{
-    width: 100%;
-    height: 30%;
-    background-color: #111214;
-    border-radius: 1rem;
-    display: flex;
-    opacity: 0.7;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    row-gap: 0.5rem;
-    cursor: pointer;
+.user {
+  width: 100%;
+  height: 30%;
+  background-color: #111214;
+  border-radius: 1rem;
+  display: flex;
+  opacity: 0.7;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 0.5rem;
+  cursor: pointer;
 }
-.user img{
-    width: 7rem;
-    aspect-ratio: 1;
-    object-fit: cover;
-    border-radius: 50%;
+.user img {
+  width: 7rem;
+  aspect-ratio: 1;
+  object-fit: cover;
+  border-radius: 50%;
 }
-.user p{
-    font-family: "Comfortaa", sans-serif;
-    font-size: 1.5rem;
-    color: #ddd;
+.user p {
+  font-family: "Comfortaa", sans-serif;
+  font-size: 1.5rem;
+  color: #ddd;
 }
-.categories{
-    width: 100%;
-    height: calc(80% - 2rem);
-    background-color: #111214;
-    border-radius: 1rem;
-    display: flex;
- 
-    flex-direction: column;
-    row-gap: 2rem;
-    padding: 2rem ;
+.categories {
+  width: 100%;
+  height: calc(80% - 2rem);
+  background-color: #111214;
+  border-radius: 1rem;
+  display: flex;
+
+  flex-direction: column;
+  row-gap: 2rem;
+  padding: 2rem;
 }
-.nav-heading{
-    font-family: "Bebas Neue" , sans-serif;
-    font-size: clamp(1.5rem, 2.5cqi, 3rem);
-    color: #ddd;
-    letter-spacing: .2rem;
-   
+.nav-heading {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: clamp(1.5rem, 2.5cqi, 3rem);
+  color: #ddd;
+  letter-spacing: 0.2rem;
 }
-.nav-links{
-    display: flex;
-    flex-direction: column;
-    font-size: 1.8rem;
-    gap: 0.2rem;
+.nav-links {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.8rem;
+  gap: 0.2rem;
 }
 .nav-link {
-    font-size: 1.45rem;
-    font-weight: 300;
-    color: #ddd;
-    text-transform: uppercase;
-    letter-spacing: 0.1rem;
-    display: flex;
-    align-items: center;
+  font-size: 1.45rem;
+  font-weight: 300;
+  color: #ddd;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  display: flex;
+  align-items: center;
 }
-.nav-link i{
-    font-size: 1.7rem;
-    margin-left: 0.5rem;
+.nav-link i {
+  font-size: 1.7rem;
+  margin-left: 0.5rem;
 }
 
-.news-section{
-    width: clamp(30rem , 43cqi, 40% );
-    height: 100%;
-    border-radius: 1rem;
+.news-section {
+  width: clamp(30rem, 43cqi, 40%);
+  height: 100%;
+  border-radius: 1rem;
 }
-.headline{
-    width: 100%;
-    height: calc(50% - 2rem);
-    background-color: #111214;
-    border-radius: 1rem;
-    margin-bottom: 2rem;
-    position: relative;
+.headline {
+  width: 100%;
+  height: calc(50% - 2rem);
+  background-color: #111214;
+  border-radius: 1rem;
+  margin-bottom: 2rem;
+  position: relative;
 }
-.headline img{
-width: 100%;
-object-fit: cover;
-height: 100%;
-border-radius: 1rem;
-opacity: 0.4;
+.headline img {
+  width: 100%;
+  object-fit: cover;
+  height: 100%;
+  border-radius: 1rem;
+  opacity: 0.4;
 }
-.headline-title{
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    padding: 1rem 4rem 1rem 1rem;
-    font-family: "Bebas Neue" , sans-serif;
-    font-size: clamp(1.5rem, 1.8cqi, 3rem);
-    letter-spacing: 0.1rem;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.7);
-    border-radius: 0 0 1rem 1rem;
+.headline-title {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 1rem 4rem 1rem 1rem;
+  font-family: "Bebas Neue", sans-serif;
+  font-size: clamp(1.5rem, 1.8cqi, 3rem);
+  letter-spacing: 0.1rem;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 0 0 1rem 1rem;
 }
 .bookmark {
-    position: absolute;
-    bottom: 1rem;
-    right: 1rem;
-    cursor: pointer;
-    font-size: 2rem;
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  cursor: pointer;
+  font-size: 2rem;
 }
 
-.news-grid{
+.news-grid {
+  width: 100%;
+  height: 50%;
+  background-color: #111214;
+  border-radius: 1rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 1rem;
+  padding: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+.news-grid-item img {
+  width: 100%;
+  object-fit: cover;
+  height: 100%;
+  border-radius: 1rem;
+  display: block;
+  opacity: 0.5;
+}
+.news-grid-item {
+  width: 100%;
+  height: 100%;
+  min-height: 10rem;
+  border-radius: 1rem;
+  position: relative;
+}
+.news-grid-item h3 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%; /* Added to make the background color width 100% */
+  padding: 1rem 3rem 1rem 1rem;
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 1.5rem;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 0 0 1rem 1rem;
+  font-weight: 300;
+}
+.news-grid i {
+  font-size: 1.6rem;
+}
+
+.my-blogs {
+  width: clamp(20rem, 27cqi, 20%);
+  height: 100%;
+  background-color: #111214;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  /* row-gap: 3rem; */
+  padding-bottom: 2rem;
+}
+.my-blogs-heading {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 3rem;
+  color: #ddd;
+  letter-spacing: 0.2rem;
+  padding: 2rem;
+}
+
+.blog-posts {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.2rem;
+  padding: 1.2rem;
+  justify-content: space-between;
+}
+.blog-post {
+  flex: 0 1 calc(50% - 0.6rem);
+  border-radius: 1rem;
+  position: relative;
+}
+
+.blog-post img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 1rem;
+  opacity: 0.5;
+}
+.blog-post h3 {
+  font-family: "Bebas Neue", sans-serif;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  border: 0 0 1rem 1rem;
+  font-size: 1.6rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  line-height: 1.6rem;
+  color: #fff;
+  overflow-wrap: break-word;
+}
+.post-buttons{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    display: flex;
+    justify-content: center;
+    column-gap: 2rem;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.3s all ;
+
+}
+
+.blog-post:hover .post-buttons{
+    opacity: 1;
+    visibility: visible;
+}
+
+.post-buttons button {
+    background-color: transparent;
+    border: none;
+    font-size: 2.2rem;
+    color: #fff;
+    cursor: pointer;
+}
+
+.weather-calender {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  row-gap: 2rem;
+}
+
+.news-footer {
+  width: 100%;
+  min-height: 5rem;
+  background-color: #111214;
+  border-radius: 0 0 1rem 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 4rem;
+}
+
+.news-footer p {
+  font-family: "Comfortaa", sans-serif;
+  font-size: 1.5rem;
+  color: #bbb;
+}
+.news-footer p span {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 2.5rem;
+}
+
+@media (max-width: 1400px) {
+.nav-links {
+  row-gap: 1rem;
+}
+
+.news-section {
+  overflow: hidden;
+}
+.news-grid {
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  overflow-y: scroll;
+}
+
+.news-grid::-webkit-scrollbar{
+  display: none;
+}
+.blog-post {
+  overflow-y: scroll;
+}
+.blog-post::-webkit-scrollbar{
+  display: none;
+}
+.blog-post {
+  flex: 0 1 calc(50% - 0.6rem);
+  
+}
+}
+
+@media (max-width: 1024px) {
+ .news-grid {
+  grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+ }
+}
+
+
+@media (max-width: 900px) {
+  .news {
+    height: 100vh;
+    height: 100%;
+    overflow-y: scroll;
+  }
+  .news::-webkit-scrollbar {
+    display: none;
+  }
+  .news-content {
+    flex-direction: column;
     width: 100%;
-    height: 50%;
-    background-color: #111214;
-    border-radius: 1rem;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    gap: 1rem;
-    padding: 1rem;
+    height: 200rem;
+    row-gap: 2rem;
+  }
+  .navbar {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    height: 18rem;
+  }
+  .user {
+    width: calc(30% - 2rem);
+    height: 100%;
+  }
+  .categories {
+    width: 70%;
+    height: 100%;
     justify-content: center;
     align-items: center;
-}
-.news-grid-item img{
+    row-gap: 1rem;
+  }
+  .nav-links {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .nav-link {
+    margin-right: 2rem;
+  }
+  .news-section {
+    display: block; /* Ensure the news section is displayed */
     width: 100%;
-    object-fit: cover;
-    height: 100%;
-    border-radius: 1rem;
-    display: block;
-    opacity: 0.5;
-}
-.news-grid-item{
-    width: 100%;
-    height: 100%;
-    min-height: 10rem;
-    border-radius: 1rem;
-    position: relative;
+  }
+  .news-grid {
+    display: grid; /* Ensure the grid layout is applied */
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+
+  .blog-posts {
+    flex: 0 1 calc(50% - 0.6rem);
     
-}
-.news-grid-item h3{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%; /* Added to make the background color width 100% */
-    padding: 1rem 3rem 1rem 1rem;
-    font-family: "Bebas Neue" , sans-serif;
-    font-size: 1.5rem;
-    background-color: rgba(0, 0, 0, 0.7);
-    border-radius: 0 0 1rem 1rem;
-    font-weight: 300;
-}
-.news-grid i{
-  
-    font-size: 1.6rem;
+  }
+ .my-blogs{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+ 
+ }
+ .weather-calender{
+  flex-direction: row;
+  column-gap: 2rem
+ }
 }
 
-.my-blogs{
-    width: clamp(20rem, 27cqi, 20%);
-    height: 100%;
-    background-color: #111214;
-    border-radius: 1rem;
+@media (max-width: 500px) {
+.news-header {
+  padding: 0 2rem;
+
 }
-.weather-calender{
-    flex: 1;
-    display: flex;
+.logo {
+  font-size: 3.5rem;
+}
+  .search-bar input {
+    width: 18rem;
+  }
+  .search-bar input:focus{
+    width: 15rem;
+  }
+  .navbar{
+    flex-direction: column;
+    height: 30rem;
+    margin-bottom: 2rem;
+  }
+  .user{
+    width: 100%;
+    min-height: 40%;
+  }
+  .user p{
+    display: none;
+  }
+  .categories{
+    width: 100%;
+  }
+  .nav-heading{
+    display: none;
+  }
+  .news-grid{
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+  .blog-post{
+    width: 100%;
+    flex: 0 1 calc(100% - 0.6rem);
+  }
+  .weather-calender{
     flex-direction: column;
     row-gap: 2rem;
-}
-
-
-.news-footer{
-    width: 100%;
-    min-height: 5rem;
-    background-color: #111214;
-    border-radius: 0 0 1rem 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 4rem;
-
-}
-
-.news-footer p{
-    font-family: "Comfortaa", sans-serif;
-    font-size: 1.5rem;
-    color: #bbb;
-}
-.news-footer p span{
-    font-family: "Bebas Neue" , sans-serif;
-    font-size: 2.5rem;
+  }
+  .news-footer{
+    min-height: 6rem;
+    flex-direction: column;
+    /* row-gap: 1rem; */
+    justify-content: center;
+  }
 }
