--- a/src/index.css
+++ b/src/index.css
@@ -22,10 +22,28 @@ html{
    color: white;
 }
 
-.news-blog-app{
+.news-blogs-app{
     width: 95vw;
     height: 95vmin;
     background-color: #060709;
     box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.5);
     border-radius: 1rem;
+}
+@media (max-width: 1400px) {
+  html{
+    font-size: 59%;
+  }
+}
+
+@media (max-width: 900px) {
+  .news-blogs-app{
+    height: 100%;
+    max-height: 90vh;
+  }
+}
+
+@media (max-width: 500px){
+  html{
+    font-size: 55%;
+  }
 }
